<resources>
    <string name="app_name">WinHillnew</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_pass">Forgot your password</string>
    <string name="sign_up">Sing Up in WinHill</string>
    <string name="lunch_demo_butt">Launch demo mode</string>
    <string name="log_in">Log in</string>
    <string name="email_addres">Email address</string>
    <string name="continue_forgot_butt">Continue</string>
    <string name="country">Country</string>
    <string name="phone_number_signup">Mobile Phone Number</string>
    <string name="pass_signup">Password</string>
    <string name="conf_pass_signup">Confirm password</string>
    <string name="first_name_signup">Legal first name</string>
    <string name="last_name_signup">Legal last name</string>
    <string name="street_adr_signup">Street address</string>
    <string name="city_signup">City</string>
    <string name="next">Next</string>
    <string name="card_numb_signup">Card Number</string>
    <string name="exp_date_signup">Expiry date: MM/YY</string>
    <string name="csv_signup">CSC: 3-4 digits</string>
    <string name="bill_adr_signup">Billing address</string>
    <string name="checkBox_signup">I have read and agree with ...</string>
    <string name="agree_signup">Agree and Creat Account</string>
    <string name="via_mail">Via E-mail</string>
    <string name="via_facebook">Facebook</string>
    <string name="via_linkedin">LinkedIn</string>
    <string name="wallet_tv">Wallet</string>
    <string name="wh_acc_wallet">WH account</string>
    <string name="funding_source">Funding source</string>
    <string name="refil">Refill</string>
    <string name="withdraw">Via E-mail</string>
    <string name="Wallet">Wallet</string>
    <string name="transfer">Via E-mail</string>
    <string name="atvivity">Activity</string>
    <string name="settings">Settings</string>
    <string name="ammuont_enter">Amount</string>
    <string name="opr1">From finding resources</string>
    <string name="opr2">USD</string>
    <string name="opr3">EUR</string>
    <string name="opr4">UAH</string>
    <string name="opr5">To WH Account</string>
    <string name="opr6">Choose the account</string>
    <string name="sendButt">Send</string>
    <string name="requestButt">Request</string>
    <string name="questionSendMenu">What is the purpose of payment?</string>
    <string name="refillFrendsSendMenu">refill friends or families account</string>
    <string name="payForGoodsSendMenu">pay for goods or services</string>
    <string name="confirmSendButt">Send</string>
    <string name="transferRequestText">Message:</string>
    <string name="transferSendText">Transfer</string>
    <string name="fromEmailRequMenu">From Email address</string>
    <string name="confirmRequestButt">Request</string>
    <string name="logOut">New Button</string>
    <string name="addPhoto">Photo</string>
    <string name="paymentsTransfersButt">Payments and Transfers</string>
    <string name="inTheApp">IN THE APP</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="myAccount">MY ACCOUNT</string>
    <string name="help">Help Center</string>
    <string name="legalAgrButt">Legal Agreement</string>
    <string name="languagesButt">Languages</string>
    <string name="addPhotoMenu">Add Photo</string>
    <string name="settings_text">Settings</string>
    <string name="password">Password</string>
    <string name="forgotBackButt">Back</string>
    <string name="menu_settings">Settings</string>
</resources>
