<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff27bdff">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:touchscreenBlocksFocus="false">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/fromEmailRequMenu"
            android:text="@string/fromEmailRequMenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:touchscreenBlocksFocus="false" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ammountSendMenu"
            android:text="@string/ammuont_enter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:touchscreenBlocksFocus="false" >

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chAccSendMenuSpinner"
            android:spinnerMode="dropdown"
            android:focusable="false"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:entries="@array/chose_account" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:touchscreenBlocksFocus="false" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/transferRequestText"
            android:id="@+id/transferRequestText"
            android:background="#fffffe9d"
            android:clickable="false"
            android:focusable="false"
            android:textSize="60dp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:touchscreenBlocksFocus="false" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirmRequestButt"
            android:id="@+id/confirmRequestButt"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>